--- a/MusicGame/MusicGame/iTunesGame.storyboard
+++ b/MusicGame/MusicGame/iTunesGame.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="I9b-fx-JyJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="I9b-fx-JyJ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -22,7 +22,7 @@
                         <subviews>
                             <searchBar contentMode="redraw" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z8g-vC-yah">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <color key="barTintColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
@@ -102,7 +102,7 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="130" height="175"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
-                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QCg-Xe-L7s">
+                                                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QCg-Xe-L7s">
                                                                         <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="height" constant="130" id="7Rw-6r-VbK"/>
@@ -194,6 +194,73 @@
             </objects>
             <point key="canvasLocation" x="976.79999999999995" y="-56.221889055472268"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="vim-8B-ftt">
+            <objects>
+                <viewController id="G63-dz-TuY" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="eqf-27-hlw"/>
+                        <viewControllerLayoutGuide type="bottom" id="UAq-g6-Lm2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XsL-Pi-7xt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fmH-hR-1yN">
+                                <rect key="frame" x="87" y="120" width="200" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="7me-Qc-fsO"/>
+                                    <constraint firstAttribute="width" constant="200" id="8dk-fj-Dfz"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E3E-Rn-66Y">
+                                <rect key="frame" x="162" y="386" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="IkG-LS-lA7"/>
+                                    <constraint firstAttribute="height" constant="50" id="Rr8-V1-agj"/>
+                                </constraints>
+                                <state key="normal" image="play"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wyJ-Zx-iNB">
+                                <rect key="frame" x="324" y="28" width="43" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="43" id="Vx5-kg-md9"/>
+                                    <constraint firstAttribute="height" constant="33" id="fb6-Ps-dsu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" red="0.97647058819999999" green="0.97254901959999995" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HGE-Ze-dFn">
+                                <rect key="frame" x="8" y="28" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="a7f-Wr-j66"/>
+                                    <constraint firstAttribute="width" constant="46" id="anU-iR-EaU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <state key="normal" title="back">
+                                    <color key="titleColor" red="0.97647058819999999" green="0.97254901959999995" blue="0.98039215690000003" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fmH-hR-1yN" firstAttribute="top" secondItem="eqf-27-hlw" secondAttribute="bottom" constant="100" id="3b4-5M-ekv"/>
+                            <constraint firstItem="HGE-Ze-dFn" firstAttribute="top" secondItem="eqf-27-hlw" secondAttribute="bottom" constant="8" id="E6r-9C-Tbp"/>
+                            <constraint firstItem="fmH-hR-1yN" firstAttribute="centerX" secondItem="XsL-Pi-7xt" secondAttribute="centerX" id="HUx-Hq-lc5"/>
+                            <constraint firstItem="HGE-Ze-dFn" firstAttribute="leading" secondItem="XsL-Pi-7xt" secondAttribute="leading" constant="8" id="Je8-2R-dEd"/>
+                            <constraint firstItem="wyJ-Zx-iNB" firstAttribute="top" secondItem="eqf-27-hlw" secondAttribute="bottom" constant="8" id="NqK-6h-Cde"/>
+                            <constraint firstItem="E3E-Rn-66Y" firstAttribute="top" secondItem="fmH-hR-1yN" secondAttribute="bottom" constant="66" id="fwB-38-pRk"/>
+                            <constraint firstAttribute="trailing" secondItem="wyJ-Zx-iNB" secondAttribute="trailing" constant="8" id="odu-Mo-naz"/>
+                            <constraint firstItem="E3E-Rn-66Y" firstAttribute="centerX" secondItem="XsL-Pi-7xt" secondAttribute="centerX" id="w7R-Vh-vel"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Kif-as-rzh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="977" y="628"/>
+        </scene>
         <!--Search Songs View Controller-->
         <scene sceneID="aSV-uz-gef">
             <objects>
@@ -211,7 +278,7 @@
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SearchedSongCell" id="ZRT-Cp-l6x" customClass="SearchedSongCell" customModule="MusicGame" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="55.5" width="375" height="50"/>
+                                        <rect key="frame" x="0.0" y="56" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZRT-Cp-l6x" id="FKj-DW-IVw">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
